fix(site-log): stop content overflow

--- a/public/_assets/scss/components/_card.scss
+++ b/public/_assets/scss/components/_card.scss
@@ -13,6 +13,8 @@
         align-items: center;
         flex-direction: column;
         gap: var(--spacing-100);
+
+        padding-bottom: var(--spacing-100);
     }
 
     &__title {
